--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    provider : false
     disqus :
       short_name : spea-dev
     livefyre :
@@ -97,9 +97,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : google
+    provider : false
     google :
-        tracking_id : 'UA-37826054-1'
+        tracking_id : ''
     getclicky :
       site_id :
     mixpanel :
